# starrocks

./: CMakeLists.txt
be/src/exec/vectorized/: aggregator.cpp
be/src/exprs/agg/: maxmin_by.h  retention_sequence.h
be/src/exprs/agg/factory/: aggregate_factory.cpp  aggregate_factory.hpp  aggregate_resolver_minmaxany.cpp  aggregate_resolver_others.cpp
be/src/exprs/vectorized/: first_day.h
be/src/storage/: delta_writer.cpp
be/test/exprs/agg/: aggregate_test.cpp
be/test/storage/rowset/: rowset_test.cpp
fe/fe-core/src/main/java/com/starrocks/catalog/: FunctionSet.java  OlapTable.java
fe/fe-core/src/main/java/com/starrocks/sql/: StatementPlanner.java
fe/fe-core/src/main/java/com/starrocks/sql/analyzer/: DecimalV3FunctionAnalyzer.java  ExpressionAnalyzer.java  FunctionAnalyzer.java  QueryAnalyzer.java
fe/fe-core/src/test/java/com/starrocks/sql/analyzer/: AnalyzeAggregateTest.java
gensrc/script/vectorized/: gen_vectorized_functions.py  vectorized_functions.py
